k8s/01-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: kafka-volume-claim
      containers:
      - name: kafka
        image: bitnami/kafka:3.4
        resources:
          requests:
            memory: 512Mi
            cpu: 100m
          limits:
            memory: 4Gi
            cpu: 1
        ports:
        - containerPort: 9092
        volumeMounts:
          - name: storage
            mountPath: "/bitnami/kafka"
